# gaurkotu-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
ceres/: Cargo.toml
ceres/src/: anime.rs  main.rs
