[package]
name = "gaurkotu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "1.2.0"
hyper = { version = "0.14" }
hyper-tls = { version = "0.5" }
log = "0.4"
regex = "1"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0.1"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
