[package]
name = "gaurkotu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "1.3.0"
hyper = { version = "0.14" }
hyper-tls = { version = "0.5" }
log = "0.4"
md5 = "0.7.0"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1"
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.28", features = ["rt-multi-thread", "macros"] }
